# FinalProject

ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/gazebo_dev/share/gazebo_dev/: package.sh
ros2_ws/install/gazebo_msgs/share/gazebo_msgs/: local_setup.sh  package.sh
ros2_ws/install/gazebo_plugins/share/gazebo_plugins/: package.sh
ros2_ws/install/gazebo_ros/share/gazebo_ros/: package.sh
ros2_ws/install/gazebo_ros_pkgs/share/gazebo_ros_pkgs/: local_setup.sh  package.sh
ros2_ws/install/hole_detector/lib/hole_detector/: holedetector_real.py
ros2_ws/install/hole_detector/share/hole_detector/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/hole_detector/share/hole_detector/rust/: Cargo.toml
ros2_ws/install/hole_detector/share/hole_detector/rust/src/: srv.rs
ros2_ws/install/my_moveit_config/share/my_moveit_config/: local_setup.sh  package.sh
ros2_ws/install/pick_and_place/lib/pick_and_place/: pick_and_place_perception  pick_and_place_perception_sim
ros2_ws/install/pick_and_place/share/pick_and_place/: package.bash  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/hole_detector/launch/: hole_detector_real.launch.py
ros2_ws/src/hole_detector/scripts/: holedetector_sim.py
ros2_ws/src/pick_and_place/launch/: pick_and_place_perception_real.launch.py  pick_and_place_perception_sim.launch.py
ros2_ws/src/pick_and_place/src/: pick_and_place_perception_sim.cpp
ros2_ws/src/ur_arm/real_my_moveit_config/: package.xml
ros2_ws/src/web_setup/: CMakeLists.txt
webpage_ws/: index.html  main.js
(+58 files in other folders)
