[package]
name = "hole_detector"
version = "0.0.0"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.3"
serde = { version = "1", optional = true, features = ["derive"] }
geometry_msgs = "*"
builtin_interfaces = "*"
std_msgs = "*"

[features]
serde = ['dep:serde', 'rosidl_runtime_rs/serde', 'geometry_msgs/serde', 'builtin_interfaces/serde', 'std_msgs/serde']
